add Neo4jHandlers for all queries, though some lack an implementation modify importer to take constructor arguments and read parameters from command line (rather than config file)